--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -116,6 +116,10 @@ required = [
   version = "=1.20.1"
 
 [[constraint]]
+  name = "gopkg.in/olivere/elastic.v5"
+  version = "^5.0.53"
+
+[[constraint]]
   name = "github.com/olivere/elastic"
   version = "^6.2.21"
 
