Update config test

--- a/v2/storage/elasticsearch/testdata/config.yaml
+++ b/v2/storage/elasticsearch/testdata/config.yaml
@@ -1,25 +1,26 @@
 receivers:
-  examplereceiver:
+  nop:
 
 processors:
-  exampleprocessor:
+  nop:
 
 exporters:
   jaeger_elasticsearch:
-    server_urls: "someUrl"
+  jaeger_elasticsearch/2:
+    server_urls: "http://someUrl"
     username: user
     password: pass
-    token_file: /var/run/k8s
     tags_as_fields:
       all: true
       config_file: /etc/jaeger
       dot_replacement: "O"
     use_aliases: true
     sniffer: true
+    create_mappings: false
 
 service:
   pipelines:
     traces:
-      receivers: [examplereceiver]
-      processors: [exampleprocessor]
-      exporters: [jaeger_elasticsearch]
+      receivers: [nop]
+      processors: [nop]
+      exporters: [jaeger_elasticsearch, jaeger_elasticsearch/2]
